static/css/blogchile.css
@charset "UTF-8";
a, a:link, a:visited {text-decoration:none;}
body {
    background: #def url(../images/bgnubes.png) repeat-x;
    color:#000;
    height:100%;
}



.izq {float:left; text-align:left;}
.der {float:right; text-align: right;}

#right_sidebar {width:20%;background:#fff;}

#logo {width:auto;height:auto;}
#header #logo {float:left;margin:0pt;background:none;color:#999;font:italic small sans-serif;text-align:right; }
#header #appname {font:bold xx-large Cantarell,sans-serif;color:#fff;}
#footer {background:none;border:none;}
#footer a {color:#00f;}

#header {min-width:900px;overflow-x:hidden;}

#logo h1 {font:bold 16px cantarell, sans-serif;}
#logo img {display:block;}

#content {min-width:320px;}

#filtro input {width:10em;}

.auth_navbar {background:#eee;position:fixed;top:0;right:0;}

/*
.publicidad {
    background:#fff;
    color:#666;
    text-align:center;
    padding:.5em;
    border-radius:10px;
    overflow:hidden;
    display:none;
}


#right_sidebar .publicidad {
    max-width:200px;
}
*/

#panel {
    background: none;
    height: 2em;
    padding: 0;
    margin: 0;
    position: fixed;
    width: 100%;
    clear: both;
    z-index: 9999;
}

/*#panel a:link, #panel a:visited {}*/

/*#panel a:hover {}*/

.feed_bloque {
    max-width:180px;
    width:47%;
    overflow:hide;
   /* margin:0em;
    text-align: left;
    border-radius:10px;
    background:none;*/
    display:inline-block;
}

/*
div.feed_bloque:hover {

    background:#def;
}
*/
#wrapper {background:none;padding-top:3em;width:auto;max-width:1280px;overflow:hidden;}

/* .bloque {background:#eee;border:1px solid none;}*/

a.noticia_link {
    /*text-decoration:none;
    color:#000;*/
    font:.8em sans-serif;
    height:60px;
    display:block;
    overflow:hidden;
    /*line-height:1em;*/
    padding:.2em;

}

a.noticia_link:visited {
    color:#000;
}

#godiv iframe {background:none;}


.feed_titulo {
    /*font:bold 1em sans-serif;*/
    text-transform:capitalize;
    /*line-height:1em;
    height:1em;*/
    clear:both;
    text-align:center;
    color:#000;;
    overflow:hidden;
    margin:0 .2em;
}

.feed_titulo a {
    /*color:#00f;
    text-decoration:underline;*/
}

.hidden {display:none !important;}

.noticia_meta {
    font:italic 10px sans-serif;
    text-align:right;
    color:#f00;
    text-decoration:underline;
    padding:0 1em;
}
.noticia {margin:.2em;}
.noticia_descripcion {}

#sitemsge {padding:0 1em;line-height:1em;font:italic small sans-serif;background:none;color:#666;float:right;}

.noticia_contenido {
    /*background: #fff;
    border: 1px solid #acf;
    border-radius:10px;
    padding:4px
    */
    overflow: hidden;
}

#statusbar {
    background:none;
    border:0;
    margin:0;
}

.boton_categoria_activa {
    border-top:1px solid #00f !important;
}

#simplemodal-overlay {background-color:#000;color:#fff;}
#simplemodal-container {background-color:#333; border:8px solid #444; padding:12px;color:#fff;}

#nueva_categoria, #nuevo_feed {max-width:350px;margin:auto;}

#search_results  {
    margin:1em auto;
    padding:1em;
    width:auto;
    clear:both;
    background:#fff;

}
.search_result .title {
    width:75%;
}
.search_result .meta {width:25%;}

#search_results li {
    vertical-align: middle;
    padding:.5em;
    list-style:none;
    }

.search_result  .title a {
    text-decoration:none;
    color:#000;
}

.search_result .title a:hover {background:#cdf;}

#search {
    width:auto;
    font: bold 1.3em sans-serif;
    margin:auto;
    text-align:center;
}

.search_result td.description {
    font:italic 1em sans-serif;
    color:#333;
    margin:auto;
    padding:1em;
    text-align:justify;
    clear:both;
}

#search_results_filter {
    
    border-radius:10px;
}

tr.search_result {border-bottom:1px solid #ccc;}

.search_result .meta {font:small sans-serif;background:transparent !important}


#filtro {
    text-align:center;
}

/*#blogs:first-child {font:bold 1.3em sans-serif;}*/
#blogs,#box {clear:both;}

#box p {padding:0 1em; background:#fff;margin:0;}


.cse, .gsc-control-cse, .gsc-control-cse-es {
     visibility:visible !important;
     background:none !important;
     border:none !important;
}

.cse {clear:both;}

.gsc-cursor-page {
    background:#eee;
    color:#00f;
    border:1px solid #ccc;
    display:inline;
    padding:0 .3em;
    margin:4px;
}

.gsc-search-box {display:block !important;}
.gsc-wrapper {background:#fff;}

.sf-menu, .sf-menu li { background:#fcc;color:#f00;font:bold 1em sans-serif;}
.sf-menu li:hover, .sf-menu li.sfHover, .sf-menu li a:hover, .sf-menu li a:active { background:#f00 !important;color:#fff !important;}
.sf-menu a:link, .sf-menu a:visited {border-left:1px solid #fff;padding:0.3em;color:#f00 !important;}

#indicadoreseconomicos {font:1em monospace;}

#tiempo  {
    display:none;
    width:100%;
    max-width:620px !important;
    overflow:hidden;
}

.pronostico {
    font-size:11px;
    width:100% !important;
}
.pronostico span {margin:auto;color:#000;padding:.5em;}


.pronostico span.dia {background:#ccf;color:#00f;font-weight:bold;}

.pronostico .icono {width:22px;height:22px;vertical-align:middle;}

